...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F5F5F7">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <!--https://developer.android.com/reference/android/support/design/widget/TextInputLayout.html-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textAutoCorrect"
        android:id="@+id/job_title"
        android:maxLines="1"
        android:hint="@string/create_job_title"
        style="@style/FullWidthEditText"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />
...
        android:layout_marginTop="5dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:ems="6"
            android:id="@+id/job_customer"
            android:maxLines="1"
            android:hint="@string/create_job_customer"
            style="@style/FullWidthEditText"
            android:layout_below="@+id/job_engineer"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
...
            android:layout_marginTop="5dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:ems="6"
            android:id="@+id/job_asset"
            android:maxLines="1"
            android:maxLength="6"
            android:hint="@string/create_job_asset"
            style="@style/FullWidthEditText"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
...
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/job_description"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/create_job_description"
            style="@style/FullWidthEditText"
            android:layout_height="100dp" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createspinner"
        android:spinnerMode="dialog"
        android:padding="10dp" />
    </LinearLayout>

</LinearLayout>

