<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_job_lookup"
    tools:context="a13070817.ticketmanagementsystem.SearchTest"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbar">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LookupRL1"
            android:padding="5dp"
            android:background="#E2E2E2"
            android:elevation="2dp">

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:id="@+id/TIL_Title"
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Title"
                    android:id="@+id/JobTitle"
                    style="@style/FullWidthEditText"
                    android:maxLines="1"
                    android:inputType="textCapWords"
                    android:textSize="22sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:id="@+id/TIL_ID"
                android:layout_width="match_parent"
                android:layout_below="@+id/TIL_Title"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ticket Number"
                    android:id="@+id/JobID"
                    style="@style/FullWidthEditText"
                    android:textSize="22sp"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/LookupRL2"
            android:padding="5dp"
            android:background="#F5F5F7"
            android:layout_below="@+id/LookupRL1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true">

             <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:id="@+id/TIL_Date"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_toStartOf="@+id/TIL_Customer"
                 android:layout_toLeftOf="@+id/TIL_Customer"
                android:layout_marginTop="5dp"
                android:layout_width="180dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Created"
                    android:id="@+id/dateCreated"
                    style="@style/FullWidthEditText"
                    android:maxLines="1" />
             </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:id="@+id/TIL_Customer"
            android:orientation="vertical"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="160dp"
            android:layout_alignTop="@+id/TIL_Date">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="User"
                android:id="@+id/JobCustomer"
                style="@style/FullWidthEditText"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:id="@+id/TIL_Asset"
            android:layout_width="wrap_content"
            android:layout_below="@+id/TIL_Date"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@+id/TIL_Customer"
            android:layout_toLeftOf="@+id/TIL_Customer"
            android:layout_alignEnd="@+id/TIL_Date"
            android:layout_alignRight="@+id/TIL_Date" >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Asset"
                android:id="@+id/JobAsset"
                style="@style/FullWidthEditText"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:id="@+id/TIL_Engineer"
            android:layout_below="@+id/TIL_Customer"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="160dp">
            <EditText
                android:layout_height="wrap_content"
                android:hint="Engineer"
                android:id="@+id/JobEngineer"
                style="@style/FullWidthEditText"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="25" />
        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
            android:id="@+id/TIL_Description"
            android:layout_below="@+id/TIL_Asset"
            android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
            android:layout_height="125dp">

            <EditText
            android:layout_width="match_parent"
            android:hint="Description"
            android:id="@+id/JobDescription"
            style="@style/FullWidthEditText"
            android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"

                android:layout_height="match_parent" />
        </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:text="Complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox"
                style="@android:style/Widget.DeviceDefault.CompoundButton.CheckBox"
                android:checked="false"
                android:layout_marginBottom="30dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:id="@+id/TIL_Severity"
                android:layout_width="100dp"
                android:layout_below="@+id/TIL_Description"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/JobSeverity"
                    android:hint="Severity"
                    style="@style/FullWidthEditText"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/LookupRL1"
        android:onClick="updateTicket"
        app:srcCompat="@drawable/ic_update_white_48dp"
        android:layout_margin="16dp"
        android:id="@+id/fabUpdate"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
