...
        android:id="@+id/menu_create_clear"
        android:title="Clear"
        android:icon="@drawable/ic_clear_white_24dp"
        app:showAsAction="always"
        android:onClick="erase" />
    <item
        android:id="@+id/menu_create_create"
        android:title="Create"
        android:icon="@drawable/ic_create_white_24dp"
        app:showAsAction="always"
        android:onClick="realmInsert" />
</menu>
