<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lookupEditText"
        android:background="#000000"
        app:showAsAction="always"
        />
</menu>