<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <item
        android:id="@+id/search"
        android:title="@string/job_lookup"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always"
        android:onClick="jobLookup"/>


...
