<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <EditText
        android:id="@+id/searchLookup"
        android:layout_width="125dp"
        android:layout_height="match_parent"
        android:orderInCategory="1000"
        android:gravity="center"
        android:inputType="number"
        android:hint="Ticket #"
        android:ems="10"
        android:layout_gravity="end"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        />

</android.support.v7.widget.Toolbar>